--- a/.github/workflows/deployEc2.yml
+++ b/.github/workflows/deployEc2.yml
@@ -10,5 +10,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: test
-        run: sh /home/ubuntu/srv/ubuntu/config/scripts/deploy.sh
+      - name: test2
+        run: ls -al
+
+      - name: test2
+        run: sh /home/ubuntu/canvasary/deploy.sh
