--- a/.github/workflows/deployEc2.yml
+++ b/.github/workflows/deployEc2.yml
@@ -12,6 +12,8 @@ jobs:
     steps:
       - run: ls -al
       - uses: actions/checkout@v4
+      - run: ls -al
+      - run: cat .github/workflows/checkout.yml
 
       - name: mkdir
         run: mkdir test
